[workspace]
resolver = "2"
members = [
    "rand-demo",
    "vec-sort",
    "clap-cmd",
    "ansi-color-cmd",
    "crossbean-chan",
    "lazy-static-assign",
    "rayon-demo",
    "crypt-demo",
    "time-tour/time-demo",
    "time-tour/chrono-time",
    "log-demo",
    "log4rs-demo",
    "semver-demo",
    "url-demo",
    "data-encoding-demo",
    "csv-demo",
    "file-demo",
    "cpu-demo"
]
