[workspace]
resolver = "2"
members = [
    "rand-demo",
    "vec-sort",
    "clap-cmd",
    "ansi-color-cmd",
    "crossbean-chan",
    "lazy-static-assign",
    "rayon-demo",
    "crypt-demo",
    "time-tutorial/time-demo",
    "time-tutorial/chrono-time",
    "log-demo",
    "log4rs-demo",
    "semver-demo",
    "url-demo",
    "data-encoding-demo",
    "csv-demo",
    "file-demo",
    "cpu-demo",
    "env-demo",
    "mime-demo"
]
