[package]
name = "mime-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mime = "0.3.16"

#reqwest相关的crate
reqwest = { version = "0.11.14",features =["json"]}
tokio = { version = "1", features = ["full"] }